removed/commented out the section to submit a congratulatory expression

--- a/Installation.html
+++ b/Installation.html
@@ -45,7 +45,7 @@
     </header>
 	
 	
-	<h2 align="center">Please Send A Congratulatory Expression to Pastor Anthony L. Riley</h2>
+	<!-- <h2 align="center">Please Send A Congratulatory Expression to Pastor Anthony L. Riley</h2>
 
 	<form action="mailto:parinstallation@gmail.com?Subject=Note To Riley" method="post" enctype="text/plain" align="center" id="congratulatory">
 	Name & Location:<br>
@@ -53,11 +53,11 @@
 	E-mail:<br>
 	<input type="text" name="mail"><br>
 	Note:<br>
-<!--maxlegnth of 100 is approximately 20 words -->
-	<textarea type="text" name="comment" size="50" maxlength="100" style="height:50px" wrap="soft"> </textarea><br><br>
+maxlegnth of 100 is approximately 20 words -->
+	<!-- <textarea type="text" name="comment" size="50" maxlength="100" style="height:50px" wrap="soft"> </textarea><br><br>
 	<input type="submit" value="Send">
 	<input type="reset" value="Reset">
-	</form>
+	</form> -->
 	
 <!--this is the new Central logo that would be displayed on the installation page, aligned to the right of the webpage. Only issue is, it does not look
 	good when viewed on a mobile device-->
