updated button to business directory form, and added verbiage under this section as well

--- a/Installation.html
+++ b/Installation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link type="text/css" rel="stylesheet" href="styles.css" />
-    <title>Installation Details</title>
+    <title>Installation of Pastor Anthony L. Riley</title>
 <!--this styles the congratulatory fields and boxes -->
 	<style>
 		form.congratulatory {
@@ -34,7 +34,7 @@
                     <a href="#reservations">Book Your Hotel Accommodations</a>
                 </li>
                 <li>
-                    <a href="#ad">Submit a Directory Ad Form</a>
+                    <a href="#ad">Submit a Business Ad or Expression to Pastor Riley</a>
                 </li>
                 <li>
                     <a href="#media">Tag us on Social Media
@@ -163,20 +163,22 @@ maxlegnth of 100 is approximately 20 words -->
 				<br>
 				
 		<a name="ad"></a>
-		                    <h2>Directory Ad Form</h2>
+		                    <h2>Business Ad & Expression Form</h2>
 		                    <form action ="https://docs.google.com/forms/d/e/1FAIpQLScfc6yPjLN5j6xjTMATGVmDcizb2FA-WrE84agVHSPuUWJUQQ/viewform?usp=sf_link" method="get" target="_blank">
-		                        <button type="submit"style="height: 50px; width: 175px"><strong>Submit an Ad</strong></button>
+								<p> Family, friends, businesses, and members, would you like to feature your business? Or, are you interested in sending a congratulatory message to Pastor Riley? Now is your chance to do so by submitting an ad! 
+								</p>
+		                        <button type="submit"style="height: 50px; width: 175px"><strong>Submit an Ad or Expression</strong></button>
 							</form>
 			<section>
 				<a name="media"></a>
-					<br><em><strong>Central Baptist Church is a social media friendly church. Feel free to document your travel journey & weekend experience with us by tagging us on Instagram, Facebook & Twitter</em></strong> 
+					<br><em><strong>Central Baptist Church is a social media friendly church. Feel free to document your travel journey & weekend experience by tagging us on Instagram, Facebook & Twitter</em></strong> 
 
 				</p>
-				<a href="https://www.instagram.com/cbcstlnews/" target="_blank">Tag us on Instagram</a>
+				<a href="https://www.instagram.com/cbcstlnews/" target="_blank">Instagram</a>
 				<br>
-				<a href="https://www.facebook.com/CBCSTL/" target="_blank">Tag us on Facebook</a>
+				<a href="https://www.facebook.com/CBCSTL/" target="_blank">Facebook</a>
 				<br>
-				<a href="https://twitter.com/cbcstl?lang=en" target="_blank">Tag us on Twitter</a>
+				<a href="https://twitter.com/cbcstl?lang=en" target="_blank">Twitter</a>
 
             </section>
         </article>
