--- a/Installation.html
+++ b/Installation.html
@@ -165,8 +165,9 @@ maxlegnth of 100 is approximately 20 words -->
 		<a name="ad"></a>
 		                    <h2>Business Ad & Expression Form</h2>
 		                    <form action ="https://docs.google.com/forms/d/e/1FAIpQLScfc6yPjLN5j6xjTMATGVmDcizb2FA-WrE84agVHSPuUWJUQQ/viewform?usp=sf_link" method="get" target="_blank">
-								<p> Family, friends, businesses, and members, would you like to feature your business? Or, are you interested in sending a congratulatory message to Pastor Riley? Now is your chance to do so by submitting an ad! 
-								</p>
+								<p> Family, friends, businesses, and members, would you like to feature your business? Or, are you interested in sending a congratulatory message to Pastor Riley? Now is your chance to do so by submitting an ad! <br>
+								Payment can be made by personal check, cash, or via paypal <br>
+								Please make checks payable to <em>Central Baptist Church<em><br>
 		                        <button type="submit"style="height: 50px; width: 175px"><strong>Submit an Ad or Expression</strong></button>
 							</form>
 			<section>
