added examples of congratulatory messages and payment amounts for each example

--- a/Installation.html
+++ b/Installation.html
@@ -168,6 +168,12 @@ maxlegnth of 100 is approximately 20 words -->
 								<p> Family, friends, businesses, and members, would you like to feature your business? Or, are you interested in sending a congratulatory message to Pastor Riley? Now is your chance to do so by submitting an ad! <br>
 								Payment can be made by personal check, cash, or via paypal <br>
 								Please make checks payable to <em>Central Baptist Church<em><br>
+									<br>
+								<strong>Examples of a congratulatory expression/note:</strong><br>
+								“Welcome to Central, Pastor Riley! J. Jenkins" - $10 <br>
+								<br>
+								"Congratulations on your installation, Pastor Riley!
+								<br>-From, The Williams Family" - $20 <br>
 		                        <button type="submit"style="height: 50px; width: 175px"><strong>Submit an Ad or Expression</strong></button>
 							</form>
 			<section>
